# pdf-dynamo-to-s3

./: Cargo.toml  CargoLambda.toml  README.md  deply.md  ejemplo.json  http.md
.cargo/: config.toml
sandbox/: 277438-1736180369.txt:Zone.Identifier  original.js  original.txt
src/: http_handler.rs  main.rs  maker.rs  s3.rs
src/maker/: pdf.rs  pdf_resources.rs  s3_resources.rs  tempCodeRunnerFile.rs
