[package]
name = "pdf-dynamodb-to-s3"
version = "0.1.0"
edition = "2021"

[build]
include = [
    "assets/**/*",
    "src/**/*",
    "Cargo.toml",
]

[dependencies]
printpdf = { version = "0.7", features = ["embedded_images"] }
ttf-parser = "0.25"
chrono = "0.4"

lambda_http = "0.13.0"
tokio = { version = "1", features = ["macros"] }
aws-sdk-s3 = "1.67.0"
dotenv = "0.15.0"
aws-config = "1.5.12"

lambda_runtime = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1.84"
lazy_static = "1.4"
escpos = "0.13.1"
unicode-normalization = "0.1.24"
